Changed template parser from run to config
This ensures it is always run before ng.template transform

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
    "name": "ng.style",
    "description": "simple data storage",
-	"version": "0.0.1-experimental1",
+	"version": "0.0.0-rc2",
    "author": {
       "name": "Adam Kircher"
    },
